// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-strike stories withOverrideStyle 1`] = `
<amplify-strike class="strike">
  <mock:shadow-root>
    <span class="strike-content">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Unstyled
</amplify-strike>
`;

exports[`amplify-strike stories withText 1`] = `
<amplify-strike class="strike">
  <mock:shadow-root>
    <span class="strike-content">
      <slot></slot>
    </span>
  </mock:shadow-root>
  or
</amplify-strike>
`;
